--- a/eclipse/config/GregTech/MaterialProperties.cfg
+++ b/eclipse/config/GregTech/MaterialProperties.cfg
@@ -31327,6 +31327,7 @@ materials {
             S:"ListMaterialByProducts_,"=,
             S:"ListMaterialReRegistrations_,"=,
             S:"ListSubTags_,HAS_COLOR,SMELTING_TO_FLUID"=,HAS_COLOR,SMELTING_TO_FLUID
+            S:"ListSubTags_,HAS_COLOR,SMELTING_TO_FLUID,NO_WORKING"=,HAS_COLOR,SMELTING_TO_FLUID,NO_WORKING
             S:"ListTCAspectAmounts_,"=,
             S:"ListTCAspectAmounts_,2,1"=,2,1
             S:"ListTCAspects_,"=,
@@ -31361,10 +31362,12 @@ materials {
         testmaterial2 {
             B:AddGas_false=false
             B:AddPlasma_false=false
+            B:AutoGenerateBlastFurnaceRecipes_false=false
             B:AutoGenerateBlastFurnaceRecipes_true=true
             B:BlastFurnaceRequired_true=true
             I:BlastFurnaceTemp_7200=7200
             S:"ChemicalFormula_?"=?
+            S:"ChemicalFormula_Made from imaginary atoms"=Made from imaginary atoms
             I:DensityDivider_1=1
             I:DensityMultiplier_1=1
             D:Density_3628800.0=3628800.0
@@ -31377,8 +31380,11 @@ materials {
             B:HasParentMod_true=true
             D:HeatDamage_0.0=0.0
             S:"ListMaterialByProducts_,"=,
+            S:"ListMaterialByProducts_,Neodymium,Testmaterial,Cobalt,Gallium"=,Neodymium,Testmaterial,Cobalt,Gallium
+            S:"ListMaterialByProducts_,Samarium,Cobalt,Gallium"=,Samarium,Cobalt,Gallium
             S:"ListMaterialReRegistrations_,"=,
             S:"ListSubTags_,HAS_COLOR,SMELTING_TO_FLUID"=,HAS_COLOR,SMELTING_TO_FLUID
+            S:"ListSubTags_,HAS_COLOR,SMELTING_TO_FLUID,NO_RECYCLING"=,HAS_COLOR,SMELTING_TO_FLUID,NO_RECYCLING
             S:"ListTCAspectAmounts_,"=,
             S:"ListTCAspects_,"=,
             S:"MatRGBA_255,0,255,0,"=255,0,255,0,
@@ -31389,6 +31395,7 @@ materials {
             S:MaterialName_Testmaterial2=Testmaterial2
             S:MaterialSmeltInto_Testmaterial2=Testmaterial2
             I:MaterialTypes_203=203
+            I:MaterialTypes_255=255
             I:MeltingPoint_7200=7200
             I:OreByProductMultiplier_1=1
             I:OreMultiplier_1=1
