--- a/eclipse/config/GregTech/Unification.cfg
+++ b/eclipse/config/GregTech/Unification.cfg
@@ -250,10 +250,12 @@ specialunificationtargets {
         B:cellPlasmaLiquidNitrogen_false=false
         B:cellPlasmaLiquidOxygen_false=false
         B:cellPlasmaNobleGases_false=false
+        B:cellPlasmaTestmaterial2_false=false
         B:cellSeedOilHemp_false=false
         B:cellSeedOilLin_false=false
         B:cellSiliconDioxide_false=false
         B:cellSnow_false=false
+        B:cellTestmaterial2_false=false
         B:cellTestmaterial_false=false
         B:cellTricalciumPhosphate_false=false
         B:cellWeebium_false=false
@@ -2503,6 +2505,7 @@ specialunificationtargets {
         B:gemSodalite_false=false
         B:gemSpodumene_false=false
         B:gemTanzanite_false=false
+        B:gemTestmaterial2_false=false
         B:gemTopaz_false=false
         B:gemTricalciumPhosphate_false=false
         B:ingotAdamantium_false=false
@@ -5890,6 +5893,14 @@ specialunificationtargets {
         B:ingotTitanium_false=false
         B:shardIron_false=false
         B:shardTitanium_false=false
+    }
+
+    forestry {
+        B:dustAsh_false=false
+        B:gemApatite_false=false
+        B:ingotBronze_false=false
+        B:ingotCopper_false=false
+        B:ingotTin_false=false
     }
 
 }
